appId: io.github.susimsek.kitezh.mobile
---
- stopApp
- launchApp:
    clearState: false
- extendedWaitUntil:
    visible: "Kitezh logo"
    timeout: 180000
- assertVisible: "Kitezh"
- assertVisible: "Continue|Devam et"
- tapOn: "Continue|Devam et"
- assertVisible: "Sign in|Giriş yap"
